--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@supabase/supabase-js": "^2.88.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "dicom-parser": "^1.8.21",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "react": "19.2.1",
